required aditional endpoints
