# api/users.go
@@ -89,43 +89,72 @@ func (server *Server) createUser(ctx *gin.Context) {
 }
 
 type UpdateUserRequest struct {
-	HashedPassword sql.NullString `json:"hashed_password"`
-	FullName       sql.NullString `json:"full_name"`
-	Email          sql.NullString `json:"email"`
-	UserName       string         `json:"user_name"`
+	HashedPassword    sql.NullString `json:"hashed_password"`
+    PasswordChangedAt sql.NullTime   `json:"password_changed_at"`
+    FullName          sql.NullString `json:"full_name"`
+    Email             sql.NullString `json:"email"`
+    IsEmailVerified   sql.NullBool   `json:"is_email_verified"`
+    UserName          string         `json:"user_name"`
 }
 
+// @Summary Update a user
+// @Description Updates a user with provided details
+// @Accept json
+// @Produce json
+// @Param request body UpdateUserRequest true "Updated user details"
+// @Success 200 
+// @Failure 400 
+// @Failure 404 
+// @Failure 500
+// @Router /user/{user_id} [Patch]
+// Updateuser updates the selected user
 // updateStudent updates a student by ID
-func (server *Server) UpdateUser(ctx *gin.Context){
+func (server *Server) UpdateUser(ctx *gin.Context) {
 	var req UpdateUserRequest
+	authPayload, err := server.authorizeUser(ctx, []string{util.AdminRole,util.StudentRole,util.TeacherRole})
+	if err != nil {
+		ctx.JSON(http.StatusUnauthorized, errorResponse(err))
+		return
+	}
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(http.StatusBadRequest, errorResponse(err))
 	}
 
-	arg := db.UpdateUserParams{
-		HashedPassword: sql.NullString{String: req.HashedPassword.String},
-		FullName: sql.NullString{String: req.FullName.String},
-		Email: sql.NullString{String: req.Email.String},
+	if authPayload.Role != req.UserName && authPayload.UserName != req.UserName {
+		ctx.JSON(http.StatusForbidden, "connot update other user's info")
+		return 
+	}
+	
+	arg := UpdateUserRequest{
 		UserName: req.UserName,
+		FullName: sql.NullString{String: req.FullName.String, Valid: req.FullName.Valid},
+		Email: sql.NullString{String: req.Email.String, Valid: req.Email.Valid},
 	}
 
-	// Call the database store function to update the student
-	updatedStudent, err := server.store.UpdateUser(ctx, db.UpdateUserParam{
-		HashedPassword: arg.HashedPassword,
-		FullName: arg.FullName,
-		Email: arg.Email,
-		UserName: arg.UserName,
-	})
-	if err != nil {
-		if err == sql.ErrNoRows{
-			ctx.JSON(http.StatusNotFound, errorResponse(err))
+	if req.HashedPassword.Valid{
+		hashedPassword, err := util.HashPassword(req.HashedPassword.String)
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, errorResponse(err))
 		}
 
-		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
-		return
+		arg.HashedPassword = sql.NullString{String: hashedPassword, Valid: true}
+		arg.PasswordChangedAt = sql.NullTime{Time: time.Now(), Valid: true}
 	}
 
-	ctx.JSON(http.StatusOK, updatedStudent)
+	user, err := server.store.UpdateUser(ctx, db.UpdateUserParam{
+		UserName: arg.UserName,
+		FullName: arg.FullName,
+		Email: arg.Email,
+		HashedPassword: arg.HashedPassword,
+	})
+	if err != nil {
+		if db.ErrorCode(err) == db.UniqueViolations {
+			ctx.JSON(http.StatusForbidden, errorResponse(err))
+		}
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+	}
+
+	ctx.JSON(http.StatusOK, user)
 }
 
 type loginUserRequest struct {
@@ -186,6 +215,7 @@ func (server *Server) loginUser(ctx *gin.Context) {
 	accessToken, accessPayload, err := server.tokenMaker.CreateToken(
 		user.User.UserName,
 		user.User.Role,
+		user.User.UserID,
 		server.config.RefreshTokenDuration,
 	)
 	if err != nil {
@@ -196,6 +226,7 @@ func (server *Server) loginUser(ctx *gin.Context) {
 	refreshToken, refreshPayload, err := server.tokenMaker.CreateToken(
 		user.User.UserName,
 		user.User.Role,
+		user.User.UserID,
 		server.config.RefreshTokenDuration,
 	)
 	if err != nil {
@@ -305,3 +336,124 @@ func (server *Server) createAdminUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, rsp)
 }
 
+
+//ListUserRequest contains the impurt parameters for list rolsbased user data
+type ListUserRequest struct {
+	PageID   int32 `form:"page_id" binding:"required,min=1"`
+	PageSize int32 `form:"page_size" binding:"required,min=5,max=10"`
+}
+
+
+// @Summary ListUser
+// @Description ListUser with the provided admin based
+// @ID create-user
+// @Accept  json
+// @Produce  json
+// @Param request body ListUserRequest true "admin list request"
+// @Success 200 
+// @Failure 400 
+// @Failure 404 
+// @Failure 500
+// @Router /listadmin [get]
+func(server *Server) ListUser(ctx *gin.Context){
+	var req ListUserRequest
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	// authPayload := ctx.MustGet(authorizationPayloadKey).(*token.Payload)
+	arg := db.ListUserParams{
+		Role: "admin",
+		Limit: req.PageSize,
+		Offset: (req.PageID - 1) * req.PageSize,
+	}
+
+	userlist, err := server.store.ListUsers(ctx, arg)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	ctx.JSON(http.StatusOK, userlist)
+}
+
+//ListUserStudentRequest contains the impurt parameters for list rolebased user data
+type ListUserStudentRequest struct {
+	PageID   int32 `form:"page_id" binding:"required,min=1"`
+	PageSize int32 `form:"page_size" binding:"required,min=5,max=10"`
+}
+
+// @Summary ListUserStudent
+// @Description ListUserStudent with the provided student based
+// @ID create-user
+// @Accept  json
+// @Produce  json
+// @Param request body ListUserStudent true "student list request"
+// @Success 200 
+// @Failure 400 
+// @Failure 404 
+// @Failure 500
+// @Router /listadmin [get]
+func(server *Server) ListUserStudent(ctx *gin.Context){
+	var req ListUserStudentRequest
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	// authPayload := ctx.MustGet(authorizationPayloadKey).(*token.Payload)
+	arg := db.ListUserParams{
+		Role: "student",
+		Limit: req.PageSize,
+		Offset: (req.PageID - 1) * req.PageSize,
+	}
+
+	userlist, err := server.store.ListUsers(ctx, arg)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	ctx.JSON(http.StatusOK, userlist)
+}
+
+//LListUserTeacherRequest contains the impurt parameters for list rolebased user data
+type ListUserTeacherRequest struct {
+	PageID   int32 `form:"page_id" binding:"required,min=1"`
+	PageSize int32 `form:"page_size" binding:"required,min=5,max=10"`
+}
+
+// @Summary ListUserTeacher
+// @Description ListUserTeacher with the provided teacher based
+// @ID create-user
+// @Accept  json
+// @Produce  json
+// @Param request body ListUserTeacher true "teacher list request"
+// @Success 200 
+// @Failure 400 
+// @Failure 404 
+// @Failure 500
+// @Router /listadmin [get]
+func(server *Server) ListUserTeacher(ctx *gin.Context){
+	var req ListUserTeacherRequest
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	// authPayload := ctx.MustGet(authorizationPayloadKey).(*token.Payload)
+	arg := db.ListUserParams{
+		Role: "teacher",
+		Limit: req.PageSize,
+		Offset: (req.PageID - 1) * req.PageSize,
+	}
+
+	userlist, err := server.store.ListUsers(ctx, arg)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	ctx.JSON(http.StatusOK, userlist)
+}
